--- a/CrazyBurger/static/css/dash.css
+++ b/CrazyBurger/static/css/dash.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap');
 
 :root{
---color-primary:#7380ec;
---color-danger:#ff7782;
+--color-primary:#f80404;
+--color-danger:#fdd300;
 --color-success:#41f1b6;
 --color-warning:#ffbb55;
 --color-white:#fff;
@@ -23,6 +23,15 @@
 --padding-1: 1.2rem;
 
 --box-shadow: e 2rem 3rem var(--color-light);
+}
+
+.dark-theme-variables{
+    --color-background:#181a1e;
+    --color-white:#202528;
+    --color-dark:#edeffd;
+    --color-dark-variant:#a3bdcc;
+    --color-light:rgba(0,0,0,0.4);
+    --box-shadow:0 2rem 3rem var(--color-light);
 }
 
 *{
@@ -112,7 +121,7 @@ aside{
     height: 100vh;
 }
 aside .top{
-    background: white;
+    background: var(--color-white);
     display:flex;
     align-items: center;
     justify-content: space-between;
@@ -132,7 +141,7 @@ aside .close{
 }
 /* Seccion del sidebar*/
 aside .sidebar{
-    background: white;
+    background: var(--color-white);
     display: flex;
     flex-direction: column;
     height: 100vh;
@@ -206,4 +215,275 @@ main .insights > div{
 }
 main .insights > div:hover{
     box-shadow: none;
+}
+main .insights > div span{
+    background: var(--color-primary);
+    padding: 0.5rem;
+    border-radius: 50%;
+    color: var(--color-white);
+    font-size: 2rem;
+}
+
+main .insights > div.expenses span{
+    background: var(--color-danger);
+}
+
+main .insights > div .middle{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+main .insights h3{
+    margin: 1rem 0 0.6rem;
+    font-size: 1rem;
+}
+
+main .insights .progress{
+    position: relative;
+    width: 92px;
+    height: 92px;
+    border-radius: 50%;
+}
+main .insights svg{
+    width: 7rem;
+    height: 7rem;
+}
+main .insights svg circle{
+    fill: none;
+    stroke: var(--color-primary);
+    stroke-width: 14;
+    stroke-linecap: round;
+    transform: translate(5px,5px);
+    stroke-dasharray: 110;
+    stroke-dashoffset: 92;
+}
+main .insights .sales svg circle{
+    stroke-dashoffset: -30;
+    stroke-dasharray: 200;
+}
+main .insights .expenses svg circle{
+    stroke-dashoffset: 20;
+    stroke-dasharray: 80;
+}
+main .insights .progress .number{
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+main .insights small{
+    margin-top: 1.6rem;
+    display: block;
+}
+main .recent-order{
+    margin-top: 2rem;
+}
+main .recent-order h2{
+    margin-bottom: 0.8rem;
+}
+main .recent-order table{
+    background: var(--color-white);
+    width: 100%;
+    border-radius: var(--card-border-radius);
+    padding: var(--card-padding);
+    text-align: center;
+    box-shadow: var(--box-shadow);
+    transition: all 300ms ease;
+}
+main .recent-order table:hover{
+    box-shadow: none;
+}
+main table tbody td{
+    height: 2.8rem;
+    border-bottom: 1px solid var(--color-light);
+    color: var(--color-dark-variant);
+}
+main table tbody tr:last-child{
+    border:none;
+}
+main .recent-order a{
+    text-align: center;
+    display: block;
+    margin: 1rem auto;
+    color: var(--color-primary);
+}
+.right{
+    margin-top: 1.4rem;
+}
+.right .top{
+    display: flex;
+    justify-content: end;
+    gap: 2rem;
+}
+.right .top button{
+    display: none;
+}
+.right .theme-toggler{
+    background: var(--color-light);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 1.6rem;
+    width: 4.2rem;
+    cursor: pointer;
+    border-radius: var(--border-radius-1);
+}
+.right .theme-toggler span{
+    font-size: 1.2rem;
+    width: 50%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.right .theme-toggler span.active{
+    background: var(--color-primary);
+    color: white;
+    border-radius: var(--border-radius-1);
+}
+.right .top .profile{
+    display: flex;
+    gap:2rem;
+    text-align: right;
+}
+
+@media screen and(max-width:1200px) {
+    .container{
+        width: 94%;
+        grid-template-columns: 7rem auto 23rem;
+    }
+    aside .logo h2{
+        display: none;
+    }
+    aside .sidebar h3{
+        display: none;
+    }
+    aside .sidebar a{
+        width: 5.6rem;
+    }
+    aside .sidebar a:last-child{
+        position: relative;
+        margin-top: 1.8rem;
+    }
+    main .insights{
+        grid-template-columns: 1fr;
+        gap: 0;
+    }
+    main .recent-order{
+        width: 94%;
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+        margin:2rem 0 0 8.8rem;
+    }
+    main .recent-order table{
+        width: 83vw;
+    }
+    main table thead tr th:last-child,
+    main table thead tr th:first-child{
+    display: none;
+    }
+    main table tbody tr td:last-child,
+    main table tbody tr td:first-child{
+    display: none;
+    }
+
+}
+
+@media screen and (max-width: 768px) {
+    .container {
+     width: 100%;
+     grid-template-columns: 1fr;
+    }
+    aside{
+      position: fixed;
+      left: -100%;
+      background: var(--color-white);
+      width: 18rem;
+      z-index: 3;
+      box-shadow: 1rem 3rem 4rem var(--color-light);
+      height: 100vh;
+      padding-right: var(--card-padding);
+      display: none;
+      animation: showMenu 400ms ease forwards;
+  }
+  @keyframes showMenu {
+    to{
+        left: 0;
+    }
+  }
+  aside .logo{
+    margin-left: 1rem;
+  }
+  aside .logo h2{
+    display: inline;
+  }
+  aside .logo h3{
+    display: inline;
+  }
+  aside .sidebar a{
+    width: 100%;
+    height: 3.4rem;
+  }
+  aside .sidebar a:last-child{
+    position: absolute;
+    bottom: 5rem;
+  }
+  aside .close{
+    display: inline-block;
+    cursor: pointer;
+  }
+  main{
+    margin-top: 8rem;
+    padding: 0 1rem;
+  }
+  main .recent-order{
+    position: relative;
+    margin: 3rem 0 0 0;
+    width: 100%;
+  }
+  main .recent-order table{
+    width: 100%;
+    margin: 0;
+  }
+  .right{
+    width: 94%;
+    margin: 0 auto 4rem;
+  }
+  .right .top{
+    position: fixed;
+    top: 0;
+    left: 0;
+    align-items: center;
+    padding: 0 0.8rem;
+    height: 4.6rem;
+    background: var(--color-white);
+    width: 100%;
+    z-index: 2;
+    box-shadow: 0 1rem 1rem var(--color-light);
+  }
+  .right .top .theme-toggler{
+    width: 4.4rem;
+    position: absolute;
+    left: 66%;
+  }
+  .right .profile .info{
+    display: none;
+  }
+  .right .top button{
+    display: inline-block;
+    background: transparent;
+    cursor: pointer;
+    color: var(--color-dark);
+    position: absolute;
+    left: 1rem;
+  }
+  .right .top button span{
+    font-size: 2rem;
+  }
 }
