--- a/CrazyBurger/templates/panel.html
+++ b/CrazyBurger/templates/panel.html
@@ -73,7 +73,7 @@
                     <span class="material-symbols-sharp">apartment</span>
                     <h3>Empresa</h3>
                 </a>
-                <a href="#">
+                <a href="{{ url_for('auth.logout') }}">
                     <span class="material-symbols-sharp">logout</span>
                     <h3>Log Out</h3>
                 </a>
@@ -82,7 +82,7 @@
         <main>
             <h1>DashBoard</h1>
             <div class="date">
-                <input type="date">
+                <input type="date" value="{{fecha_actual}}">
             </div>
             <div class="insights">
                 <div class="sales">
@@ -161,7 +161,7 @@
                 </div>
                 <div class="profile">
                     <div class="info">
-                        <p>Hey <b>Daniel</b></p>
+                        <p>Hey <b>{{name}}</b></p>
                         <small class="text-muted">Admin</small>
                     </div>
                     <div class="profile-photo">
