--- a/CrazyBurger/templates/panel.html
+++ b/CrazyBurger/templates/panel.html
@@ -14,6 +14,10 @@
 
     <!-- Libreria de Swal Alert -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+    <!-- Libreria de Datables -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.13.4/css/jquery.dataTables.css">
+    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.js"></script>
 </head>
 
 <body>
@@ -33,7 +37,7 @@
                     <span class="material-symbols-sharp">dashboard</span>
                     <h3>DashBoard</h3>
                 </a>
-                <a href="#">
+                <a href="{{ url_for('clientes.getAll') }}">
                     <span class="material-symbols-sharp">location_away</span>
                     <h3>Clientes</h3>
                 </a>
