--- a/CrazyBurger/templates/platillos.html
+++ b/CrazyBurger/templates/platillos.html
@@ -16,7 +16,8 @@
     <div class="card-footer">
       <span class="text-price">${{ platillo[7] }}</span>
       <div class="card-button">
-        <button><a href="generarPedido?id={{ platillo[0] }}"><i class="fa-solid fa-bag-shopping"></i></a></button>
+        <button><a href="/pedido/generarPedido?id={{ platillo[0] }}"><i
+              class="fa-solid fa-bag-shopping"></i></a></button>
       </div>
     </div>
   </div>
