--- a/CrazyBurger/templates/layout.html
+++ b/CrazyBurger/templates/layout.html
@@ -50,7 +50,7 @@
     {% for message in messages %}
     {% if 'error' in message %}
     <div class="alert-error"><i class="fa-solid fa-xmark"></i> {{ message }}</div>
-    {% elif 'Warning' in message %}
+    {% elif 'warning' in message %}
     <div class="alert-warning"><i class="fa-solid fa-triangle-exclamation"></i> {{ message }}</div>
     {% else %}
     <div class="alert-success"><i class="fa-solid fa-circle-check"></i> {{ message }}</div>
