--- a/CrazyBurger/templates/shoping_car.html
+++ b/CrazyBurger/templates/shoping_car.html
@@ -3,7 +3,7 @@
 {% block description %}COMPRAS DEL USUARIO{% endblock %}
 {% block content %}
 <div class="container__compras">
-  <h1>Carrito de compras</h1>
+  <h1>Carrito de compras: <span>{{ name }}</span></h1>
   {% for pedido in pedidos %}
   <div class="compras">
     <ul>
