Modulo de Empleados
CRUD de empleados

--- a/CrazyBurger/templates/panel.html
+++ b/CrazyBurger/templates/panel.html
@@ -41,7 +41,7 @@
                     <span class="material-symbols-sharp">location_away</span>
                     <h3>Clientes</h3>
                 </a>
-                <a href="#">
+                <a href="{{ url_for('empleados.getAll') }}">
                     <span class="material-symbols-sharp">badge</span>
                     <h3>Empleados</h3>
                 </a>
