--- a/CrazyBurger/templates/panel.html
+++ b/CrazyBurger/templates/panel.html
@@ -10,14 +10,16 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="../static/css/dash.css">
     <!-- Cargar Librerias de Jquery -->
-    <script src="https://code.jquery.com/jquery-3.6.4.js" integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.4.js"
+        integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
 
     <!-- Libreria de Swal Alert -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     <!-- Libreria de Datables -->
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.13.4/css/jquery.dataTables.css">
-    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.js"></script>
+    <script type="text/javascript" charset="utf8"
+        src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.js"></script>
 </head>
 
 <body>
@@ -33,62 +35,172 @@
                 </div>
             </div>
             <div class="sidebar">
-                <a href="{{ url_for('main.profile') }}" class="active">
-                    <span class="material-symbols-sharp">dashboard</span>
-                    <h3>DashBoard</h3>
-                </a>
-                <a href="{{ url_for('clientes.getAll') }}">
-                    <span class="material-symbols-sharp">location_away</span>
-                    <h3>Clientes</h3>
-                </a>
-                <a href="{{ url_for('empleados.getAll') }}">
-                    <span class="material-symbols-sharp">badge</span>
-                    <h3>Empleados</h3>
-                </a>
-                <a href="{{ url_for('puestos.getAll') }}">
-                    <span class="material-symbols-sharp">home_repair_service</span>
-                    <h3>Puestos</h3>
-                </a>
-                <a href="{{url_for('departamento.getAll')}}">
-                    <span class="material-symbols-sharp">real_estate_agent</span>
-                    <h3>Departamentos</h3>
-                </a>
-                <a href="{{url_for('proveedor.getAll')}}">
-                    <span class="material-symbols-sharp">supervisor_account</span>
-                    <h3>Proveedores</h3>
-                </a>
-                <a href="#">
-                    <span class="material-symbols-sharp">point_of_sale</span>
-                    <h3>Ventas</h3>
-                </a>
-                <a href="#">
-                    <span class="material-symbols-sharp">store</span>
-                    <h3>Compras</h3>
-                </a>
-                <a href="#">
-                    <span class="material-symbols-sharp">menu_book</span>
-                    <h3>Menu</h3>
-                </a>
-                <a href="{{url_for('receta.getAll')}}">
-                    <span class="material-symbols-sharp">restaurant</span>
-                    <h3>Recetas</h3>
-                </a>
-                <a href="{{url_for('ingrediente.getAll')}}">
-                    <span class="material-symbols-sharp">lunch_dining</span>
-                    <h3>Ingredientes</h3>
-                </a>
-                <a href="#">
-                    <span class="material-symbols-sharp">food_bank</span>
-                    <h3>Inventario</h3>
-                </a>
-                <a href="{{url_for('empresa.getAll')}}">
-                    <span class="material-symbols-sharp">apartment</span>
-                    <h3>Empresa</h3>
-                </a>
-                <a href="{{ url_for('auth.logout') }}">
-                    <span class="material-symbols-sharp">logout</span>
-                    <h3>Log Out</h3>
-                </a>
+
+                {% if active == 'profile' %}
+
+                    <a href="{{ url_for('main.profile') }}" class="active">
+                        <span class="material-symbols-sharp">dashboard</span>
+                        <h3>DashBoard</h3>
+                    </a>
+
+                {% else %}
+
+                    <a href="{{ url_for('main.profile') }}">
+                        <span class="material-symbols-sharp">dashboard</span>
+                        <h3>DashBoard</h3>
+                    </a>
+
+                {% endif %}
+
+                <!-- --------------------------------------------------------- -->
+
+                {% if active == 'clientes' %}
+
+                    <a href="{{ url_for('clientes.getAll') }}" class="active">
+                        <span class="material-symbols-sharp">location_away</span>
+                        <h3>Clientes</h3>
+                    </a>
+
+                {% else %}
+
+                    <a href="{{ url_for('clientes.getAll') }}">
+                        <span class="material-symbols-sharp">location_away</span>
+                        <h3>Clientes</h3>
+                    </a>
+                
+                {% endif %}
+
+                <!-- --------------------------------------------------------- -->
+
+                {% if active == 'empleados' %}
+
+                    <a href="{{ url_for('empleados.getAll') }}" class="active">
+                        <span class="material-symbols-sharp">badge</span>
+                        <h3>Empleados</h3>
+                    </a>
+
+                {% else %}
+
+                    <a href="{{ url_for('empleados.getAll') }}">
+                        <span class="material-symbols-sharp">badge</span>
+                        <h3>Empleados</h3>
+                    </a>
+                
+                {% endif %}
+
+                <!-- --------------------------------------------------------- -->
+
+                {% if active == 'puestos' %}
+                    <a href="{{ url_for('puestos.getAll') }}" class="active">
+                        <span class="material-symbols-sharp">home_repair_service</span>
+                        <h3>Puestos</h3>
+                    </a>
+                {% else %}
+                    <a href="{{ url_for('puestos.getAll') }}">
+                        <span class="material-symbols-sharp">home_repair_service</span>
+                        <h3>Puestos</h3>
+                    </a>
+                {% endif %}
+
+                <!-- --------------------------------------------------------- -->
+
+                {% if active == 'departamento' %}
+                    <a href="{{ url_for('departamento.getAll') }}" class="active">
+                        <span class="material-symbols-sharp">real_estate_agent</span>
+                        <h3>Departamentos</h3>
+                    </a>
+                {% else %}
+                    <a href="{{url_for('departamento.getAll')}}">
+                        <span class="material-symbols-sharp">real_estate_agent</span>
+                        <h3>Departamentos</h3>
+                    </a>
+                {% endif %}
+
+                <!-- --------------------------------------------------------- -->
+
+                {% if active == 'proveedor' %}
+                    <a href="{{url_for('proveedor.getAll')}}" class="active">
+                        <span class="material-symbols-sharp">supervisor_account</span>
+                        <h3>Proveedores</h3>
+                    </a>
+                {% else %}
+                    <a href="{{url_for('proveedor.getAll')}}">
+                        <span class="material-symbols-sharp">supervisor_account</span>
+                        <h3>Proveedores</h3>
+                    </a>
+                {% endif %}
+
+                <!-- --------------------------------------------------------- -->
+
+                
+                        <a href="#">
+                            <span class="material-symbols-sharp">point_of_sale</span>
+                            <h3>Ventas</h3>
+                        </a>
+                        <a href="#">
+                            <span class="material-symbols-sharp">store</span>
+                            <h3>Compras</h3>
+                        </a>
+                        <a href="#">
+                            <span class="material-symbols-sharp">menu_book</span>
+                            <h3>Menu</h3>
+                        </a>
+
+                <!-- --------------------------------------------------------- -->
+
+                {% if active == 'receta' %}
+                    <a href="{{url_for('receta.getAll')}}" class="active">
+                        <span class="material-symbols-sharp">restaurant</span>
+                        <h3>Recetas</h3>
+                    </a>
+                {% else %}
+                    <a href="{{url_for('receta.getAll')}}">
+                        <span class="material-symbols-sharp">restaurant</span>
+                        <h3>Recetas</h3>
+                    </a>
+                {% endif %}
+
+                <!-- --------------------------------------------------------- -->
+
+                {% if active == 'ingrediente' %}
+                    <a href="{{url_for('ingrediente.getAll')}}" class="active">
+                        <span class="material-symbols-sharp">lunch_dining</span>
+                        <h3>Ingredientes</h3>
+                    </a>
+                {% else %}
+                    <a href="{{url_for('ingrediente.getAll')}}">
+                        <span class="material-symbols-sharp">lunch_dining</span>
+                        <h3>Ingredientes</h3>
+                    </a>
+                {% endif %}
+
+                <!-- --------------------------------------------------------- -->
+
+                        <a href="#">
+                            <span class="material-symbols-sharp">food_bank</span>
+                            <h3>Inventario</h3>
+                        </a>
+
+                <!-- --------------------------------------------------------- -->
+
+                {% if active == 'empresa' %}
+                    <a href="{{url_for('empresa.getAll')}}" class="active">
+                        <span class="material-symbols-sharp">apartment</span>
+                        <h3>Empresa</h3>
+                    </a>
+                {% else %}
+                    <a href="{{url_for('empresa.getAll')}}">
+                        <span class="material-symbols-sharp">apartment</span>
+                        <h3>Empresa</h3>
+                    </a>
+                {% endif %}
+
+                <!-- --------------------------------------------------------- -->
+
+                        <a href="{{ url_for('auth.logout') }}">
+                            <span class="material-symbols-sharp">logout</span>
+                            <h3>Log Out</h3>
+                        </a>
             </div>
         </aside>
         {% block content %}
