--- a/CrazyBurger/static/css/dash.css
+++ b/CrazyBurger/static/css/dash.css
@@ -481,7 +481,28 @@ main .recent-order a h3{
   .submit:hover {
     background-color: rgb(194, 58, 56);
   }
-
+  select {
+    padding: 8px;
+    font-size: 16px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    background-color: #fff;
+    color: #333;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  }
+  
+  select:hover, select:focus {
+    outline: none;
+    border-color: #666;
+  }
+  
+  select option {
+    background-color: #fff;
+    color: #333;
+  }
+  .img_receta{
+    border-radius: 100%;
+  }
   .contenedor-btn-file input[type="file"] {
     appearance: none;
     display: none;
