--- a/CrazyBurger/templates/menu/Menu.html
+++ b/CrazyBurger/templates/menu/Menu.html
@@ -3,19 +3,18 @@
 <main>
     
     <div class="recent-order">
-        <h2>Recetas</h2>
-        <a href="{{url_for('receta.insert')}}" class="btn primary">
+        <h2>Menu</h2>
+        <a href="{{url_for('menu.insert')}}" class="btn primary">
             <span class="material-symbols-sharp">data_saver_on</span>
             <h3>Nuevo</h3>
         </a>
         <table>
             <thead>
                 <tr>
-                <th>Receta</th>
+                <th>Platillo</th>
+                <th>Imagen</th>
                 <th>Descripcion</th>
-                <th>Tiempo</th>
-                <th>Calorias</th>
-                <th></th>
+                <th>costo</th>
                 <th></th>
                 <th></th>
                 </tr>
@@ -24,16 +23,13 @@
                 {%for row in resulset %}
                 <tr>
                     <td>{{row[1]}}</td>
+                    <td><img src="../../static/img/{{row[3]}}" width="60px" height="60px" alt="Platillo" class="img_receta"></td>
                     <td>{{row[2]}}</td>
-                    <td>{{row[3]}}</td>
-                    <td>{{row[4]}}</td>
-                    <td ><a class="success" href="verDetalle?id={{ row[0] }}" class="btn">
-                        <span class="material-symbols-sharp">description</span>
-                    </a></td>
-                    <td ><a class="warning" href="updateReceta?id={{ row[0] }}" class="btn">
+                    <td>${{row[4]}}</td>
+                    <td ><a class="warning" href="updateMenu?id={{ row[0] }}" class="btn">
                         <span class="material-symbols-sharp">edit_document</span>
                     </a></td>
-                    <td><a class="primary" href="deleteReceta?id={{ row[0] }}" class="btn">
+                    <td><a class="primary" href="deleteMenu?id={{ row[0] }}" class="btn">
                         <span class="material-symbols-sharp">delete</span></a>
                     </td>
                 </tr>
