--- a/CrazyBurger/templates/panel.html
+++ b/CrazyBurger/templates/panel.html
@@ -53,7 +53,7 @@
                     <span class="material-symbols-sharp">store</span>
                     <h3>Compras</h3>
                 </a>
-                <a href="#">
+                <a href="{{url_for('menu.getAll')}}">
                     <span class="material-symbols-sharp">menu_book</span>
                     <h3>Menu</h3>
                 </a>
